# gpt-migrate

./: .gitignore  CODE_OF_CONDUCT.md  DISCLAIMER.md  LICENSE  README.md  TERMS.md  TERMS_OF_USE.md  hello.py  package.json  pyproject.toml
.github/: dependabot.yml
benchmarks/flask-cpp/source/: .gitignore  db.py
benchmarks/flask-fastapi/source/: app.py
benchmarks/flask-nodejs/source/: app.py
benchmarks/flask-rust/source/: requirements.txt
benchmarks/single_endpoint/: app.py
client/grocery-store/: package-lock.json  package.json
client/grocery-store/app/: groceryItems.json
gpt_migrate/: ai.py  config.py  knowledge_manager.py  main.py  parser.py  requirements.txt  steps.py  steps_old.py  utils.py
gpt_migrate/memory/: external_dependencies  fileslist
gpt_migrate/memory/gpt_migrate/: db.js_sigs.json
gpt_migrate/migrator/: analyzer.py  intermediate_representer.py  translator.py
gpt_migrate/prompts/: PREFERENCES
gpt_migrate/prompts/p1_guidelines/: guidelines
gpt_migrate/prompts/p2_actions/: write_code
gpt_migrate/prompts/p3_debug/: create_file  debug_file  debug_testfile  identify_file  move_files
gpt_migrate/prompts/p3_migrate/: 3_write_migration  5_refine_target_docker  6_get_function_signatures
gpt_migrate/steps/: 1_create_target_docker  2a_identify_endpoint_files  2b_create_openapi_spec  3_create_endpoints  debug.py  environment.py  io_spec.py  migrate.py  old_io_spec.py  old_target_apis.py  setup.py  target_apis.py  test.py
source/: app.py
src/gpt_migrate/: ai.py  config.py  main.py  parser.py  utils.py
src/gpt_migrate/steps/: debug.py  (+3 more)
(+33 files in other folders)
